# ai-agent

./: .gitignore  Chapgpt VS our Ai Agent.docx  Export.docx  README.md  pyproject.toml
Get Started/: Quickstart.docx
Working with your AI/: Brainstorming.docx  Chat.docx  Research.docx  Ultraplan.docx
Workspace/: Canvas.docx  Documents.docx  Notes.docx  Sections.docx
servicesmith/: cli.py  config.py
servicesmith/agents/: _base.py  critic.py  intake.py  orchestrator.py  researcher.py  strategist.py
servicesmith/llm/: ollama_client.py
servicesmith/memory/: project.py
servicesmith/prompts/: blueprinter.md  critic.md  intake.md  researcher.md  strategist.md
servicesmith/tools/: citations.py  reddit.py  web_search.py
