[project]
name = "servicesmith"
version = "0.1.0"
description = "A local AI agent that helps you design a service business in any industry."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.6",
    "platformdirs>=4.2",
    "beautifulsoup4>=4.12",
]

[project.scripts]
servicesmith = "servicesmith.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
